examples/test/testpolicy8634.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8634
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key7: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value37
          key25: value49
          key36: value23
      podSelector:
        matchLabels:
          key4: value11
